// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SNONotification renders correctly 1`] = `
<div class="notification-item unread">
  <div class="row">
    <div class="notification-item__new-indicator-container"><span class="notification-item__new-indicator-container__circle"></span></div>
    <div class="notification-item__icon-container">
      <div class="icon"><svg></svg></div>
    </div>
    <div class="notification-item__text-container">
      <p class="notification-item__text-container__message"><b class="notification-item__text-container__message__bold">title1:</b> message1
      </p>
      <!---->
    </div>
  </div>
  <div class="notification-item__date-container">
    <p class="notification-item__date-container__date">Just now</p>
  </div>
</div>
`;

exports[`SNONotification renders correctly with default props 1`] = `
<div class="notification-item unread">
  <div class="row">
    <div class="notification-item__new-indicator-container"><span class="notification-item__new-indicator-container__circle"></span></div>
    <div class="notification-item__icon-container">
      <div class="icon"><svg></svg></div>
    </div>
    <div class="notification-item__text-container">
      <p class="notification-item__text-container__message"><b class="notification-item__text-container__message__bold">:</b>
      </p>
      <!---->
    </div>
  </div>
  <div class="notification-item__date-container">
    <p class="notification-item__date-container__date">Just now</p>
  </div>
</div>
`;
